workloads/blog/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog
  namespace: blog
  labels:
    app: blog
spec:
  selector:
    app: blog
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
