workloads/blog/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: blog
  namespace: blog
spec:
  parentRefs:
    - name: main
      namespace: gateway
  hostnames:
    - blog.cyberdan.dev
  rules:
    - backendRefs:
        - name: blog
          port: 8080
